# goldbot

./: .replit  README.md  app.py  auto_trader.py  backtester.py  data_fetcher.py  database.py  deployment_guide.md  model.py  mt5_connector.py  openai_advisor.py  pyproject.toml  strategy_recommender.py  trading_strategy.py  utils.py  visualization.py
